--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"asyncawait": "^1.0.6",
+		"bcrypt-nodejs": "^0.0.3",
 		"body-parser": "~1.18.2",
+		"connect-flash": "^0.1.1",
+		"connect-mongo": "^2.0.0",
 		"cookie-parser": "~1.4.3",
 		"debug": "~2.6.9",
 		"ejs": "~2.5.7",
 		"express": "~4.15.5",
+		"express-session": "^1.15.6",
+		"isemail": "^3.0.0",
 		"mongoose": "^4.12.4",
 		"morgan": "~1.9.0",
-		"serve-favicon": "~2.4.5"
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"passport.socketio": "^3.7.0",
+		"serve-favicon": "~2.4.5",
+		"socket.io": "^2.0.4",
+		"socket.io-client": "^2.0.4"
 	},
 	"devDependencies": {
 		"axios": "^0.17.0",
@@ -34,6 +45,8 @@
 		"react-dom": "^16.0.0",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
+		"redux-promise-middleware": "^4.4.1",
 		"uglifyjs-webpack-plugin": "^1.0.1",
 		"webpack": "^3.8.1",
 		"webpack-dev-server": "^2.9.3",
