--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
 		"babel-loader": "^7.1.2",
 		"babel-plugin-react-html-attrs": "^2.0.0",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-polyfill": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
+		"es6-promisify": "^5.0.0",
 		"html-webpack-plugin": "^2.30.1",
 		"nodemon": "^1.12.1",
 		"path": "^0.12.7",
