--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "node ./bin/www",
 		"server": "nodemon ./bin/www",
 		"client": "webpack-dev-server",
+		"build": "set NODE_ENV=production&&webpack -p --config ./webpack.production.config.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
@@ -19,12 +20,16 @@
 		"ejs": "~2.5.7",
 		"express": "~4.15.5",
 		"express-session": "^1.15.6",
+		"font-awesome": "^4.7.0",
+		"gravatar": "^1.6.0",
 		"isemail": "^3.0.0",
 		"mongoose": "^4.12.4",
 		"morgan": "~1.9.0",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
 		"passport.socketio": "^3.7.0",
+		"react-addons-update": "^15.6.2",
+		"relative-date": "^1.1.3",
 		"serve-favicon": "~2.4.5",
 		"socket.io": "^2.0.4",
 		"socket.io-client": "^2.0.4"
